--- a/admin/templates/default/css/style.css
+++ b/admin/templates/default/css/style.css
@@ -130,7 +130,7 @@ a, a:link {
 }
 
 /* north layout styles */
-.ui-layout-north { position:relative; margin:0; padding:0; height:5%; display:block; overflow:hidden; }
+div.ui-layout-north { position:relative; margin:0; padding:0; height:5%; display:block; overflow:hidden; }
 .north-top { width:99%; margin:0 auto; padding:5px 0.5% 7px 0.5%; display:block; clear:both; }
 .north-bottom { position:relative; height:32px; width:100%; margin:0 auto; border-bottom:1px solid #f5f5f5; overflow:visible; z-index:9999; clear:both; }
 
@@ -179,7 +179,7 @@ a.mod_box_sbtn_active:hover { background:url('../images/modblock_resize_ic.png')
 
 
 /* center layout styles */
-.ui-layout-center { position:relative; width:100%; height:100%; padding:4px; margin:0; overflow:hidden; }
+div.ui-layout-center { position:relative; width:100%; height:100%; padding:4px; margin:0; overflow:hidden; }
 
 /* center-middle_content area */
 .middle_content {
@@ -210,8 +210,8 @@ a.mod_box_sbtn_active:hover { background:url('../images/modblock_resize_ic.png')
 	min-width:600px;
 	background:#fff;
 	display:block;
-	overflow:hidden;
-	overflow-y:auto;
+	/*overflow:hidden;*/
+	overflow:auto;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
@@ -285,7 +285,7 @@ a.mod_box_sbtn_active:hover { background:url('../images/modblock_resize_ic.png')
 /* end of center layout styles */
 
 /* west layout styles */
-.ui-layout-west { height:100%; padding:4px; overflow:auto; }
+div.ui-layout-west { height:100%; padding:4px; overflow:auto; }
 /* end of west  layout styles */
 
 
